--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Wingdings';
+    src: url('css/wingding.tff') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 html {
     font-family: 'Space Grotesk', sans-serif !important;
 }
