--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Wingdings';
-    src: url('css/wingding.tff') format('truetype');
+    src: url('css/wingding.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
