--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -14,6 +14,7 @@ body {
     display: flex !important;
     flex-direction: column !important;
     background-color: white !important;
+    font-family: 'Space Grotesk', sans-serif !important;
 }
 #app {
     flex: 1 0 auto;
